# djemplate

./: .editorconfig  .env.example  LICENSE  README.md  docker-compose.yaml  example.env  pyproject.toml
.github/workflows/: django.yml
apps/accounts/: models.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_models.py
apps/core/: urls.py  views.py
apps/core/tests/: test_urls.py  test_views.py
config/: settings.py  urls.py
project/config/: settings.py
project/templates/: base.html
project/tests/: test_database_connection.py
static/css/: style.css
templates/: base.html
templates/pages/: index.html
templates/templates/: base.html
templates/templates/core/: index.html
